--- a/widget/index.html
+++ b/widget/index.html
@@ -192,7 +192,7 @@
 
       // Add click handler for reset chat button
       document.querySelector('button.icon-button').addEventListener('click', () => {
-        window.resetVisitorId();
+        window.resetChatId();
       });
 
       // Add click handler for share button
