Correct url handling

--- a/index.html
+++ b/index.html
@@ -333,16 +333,14 @@
 
       // Environment detection
       const scriptSrc = window.location.href;
-      
       if (scriptSrc.includes('dev')) {
         dev = true;
         sourceUrl = 'https://sleak-chat.github.io/sleakbot-v2';
-      }   else {
-        sourceUrl = 'https://cdn.sleak.chat';
-      }
-      
-      if (scriptSrc.includes('127.0.0.1:')) {
+      } else if (scriptSrc.includes('127.0.0.1:')) {
         sourceUrl = 'http://127.0.0.1:5501/';
+      } else {
+        sourceUrl = 'https://sleak-chat.github.io/sleakbot-v2';
+        // sourceUrl = 'https://cdn.sleak.chat';
       }
 
       if (chatbotId) {
