new local environment

--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
       if (scriptSrc.includes('dev')) {
         dev = true;
         sourceUrl = 'https://sleak-chat.github.io/sleakbot-v2';
-      } else if (scriptSrc.includes('127.0.0.1:')) {
-        sourceUrl = 'http://127.0.0.1:5501/';
+      } else if (scriptSrc.includes('localhost:8000')) {
+        sourceUrl = 'http://localhost:8001/';
       } else {
         sourceUrl = 'https://sleak-chat.github.io/sleakbot-v2';
         // sourceUrl = 'https://cdn.sleak.chat';
