--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Widget Preview</title>
     <style>
       body {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
         margin: 0;
         padding: 0;
         background-color: white;
@@ -19,7 +20,9 @@
         background-size: 20px 20px;
         border: 1px solid #ebebeb;
         border-radius: 8px;
-        min-height: calc(100vh - 60px); /* Viewport height minus header height minus bottom padding */
+        min-height: calc(
+          100vh - 60px
+        ); /* Viewport height minus header height minus bottom padding */
         box-shadow: 0 0px 4px 0 rgba(0, 0, 0, 0.05);
       }
 
@@ -121,36 +124,42 @@
         font-weight: 500;
         color: #333;
         transition: all 0.15s ease;
-        box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.3), inset 0 -1px 0 0 rgba(0, 0, 0, 0.1), 0 1px 0 0 rgba(74, 74, 74, 0.8);
+        box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.3),
+          inset 0 -1px 0 0 rgba(0, 0, 0, 0.1), 0 1px 0 0 rgba(74, 74, 74, 0.8);
         position: relative;
         top: 0;
       }
 
       .button:hover {
         background-color: #ebebeb;
-        box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.4), inset 0 -1px 0 0 rgba(0, 0, 0, 0.15), 0 1px 0 0 rgba(74, 74, 74, 0.8);
+        box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.4),
+          inset 0 -1px 0 0 rgba(0, 0, 0, 0.15), 0 1px 0 0 rgba(74, 74, 74, 0.8);
       }
 
       .button:active {
         top: 1px;
-        box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.1), inset 0 -1px 0 0 rgba(0, 0, 0, 0.05);
+        box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.1),
+          inset 0 -1px 0 0 rgba(0, 0, 0, 0.05);
       }
 
       .button.primary {
         background-color: #333;
         color: white;
         border: 1px solid #1a1a1a;
-        box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.1), inset 0 -1px 0 0 rgba(0, 0, 0, 0.3), 0 1px 0 0 rgba(26, 26, 26, 0.8);
+        box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.1),
+          inset 0 -1px 0 0 rgba(0, 0, 0, 0.3), 0 1px 0 0 rgba(26, 26, 26, 0.8);
       }
 
       .button.primary:hover {
         background-color: #404040;
-        box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.15), inset 0 -1px 0 0 rgba(0, 0, 0, 0.4), 0 1px 0 0 rgba(26, 26, 26, 0.8);
+        box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.15),
+          inset 0 -1px 0 0 rgba(0, 0, 0, 0.4), 0 1px 0 0 rgba(26, 26, 26, 0.8);
       }
 
       .button.primary:active {
         top: 1px;
-        box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.2), inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
+        box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.2),
+          inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
       }
 
       .icon-button {
@@ -248,11 +257,13 @@
         }
         /* Hide dashboard and agent settings buttons */
         .button.primary,
-        a[href*='agent-instellingen'].icon-button {
+        a[href*="agent-instellingen"].icon-button {
           display: none;
         }
         .grid-container {
-          min-height: calc(100svh - 60px); /* Use small viewport height on mobile */
+          min-height: calc(
+            100svh - 60px
+          ); /* Use small viewport height on mobile */
         }
       }
     </style>
@@ -260,7 +271,10 @@
   <body>
     <header class="header">
       <div class="logo-section">
-        <a href="https://sleak.chat?utm_source=previewpage&utm_medium=header-logo" target="_blank">
+        <a
+          href="https://sleak.chat?utm_source=previewpage&utm_medium=header-logo"
+          target="_blank"
+        >
           <img src="images/sleaklogo.svg" class="logo" alt="Sleak Logo" />
         </a>
       </div>
@@ -277,11 +291,23 @@
           <img src="images/Stroke Rounded Icon (39).svg" alt="Agent Settings" />
           <span class="tooltip">Delen</span>
         </button>
-        <a href="https://dashboard.sleak.chat/agent-instellingen" target="_blank" class="icon-button">
-          <img src="images/Stroke Rounded Cursor Edit.svg" alt="Agent Settings" />
+        <a
+          href="https://dashboard.sleak.chat/agent-instellingen"
+          target="_blank"
+          class="icon-button"
+        >
+          <img
+            src="images/Stroke Rounded Cursor Edit.svg"
+            alt="Agent Settings"
+          />
           <span class="tooltip">Agent instellingen</span>
         </a>
-        <a href="https://dashboard.sleak.chat/agent" target="_blank" class="button primary">Open in dashboard</a>
+        <a
+          href="https://dashboard.sleak.chat/agent"
+          target="_blank"
+          class="button primary"
+          >Open in dashboard</a
+        >
       </div>
     </header>
 
@@ -299,60 +325,79 @@
       // Get chatbot ID from URL parameters
       const queryString = window.location.search;
       const urlParams = new URLSearchParams(queryString);
-      const chatbotId = urlParams.get('id');
+      const chatbotId = urlParams.get("id");
 
       // Function to get cookie value by name
       function getCookie(name) {
         const value = `; ${document.cookie}`;
         const parts = value.split(`; ${name}=`);
-        if (parts.length === 2) return parts.pop().split(';').shift();
+        if (parts.length === 2) return parts.pop().split(";").shift();
         return null;
       }
 
       // Add click handler for reset chat button
-      document.querySelector('button.icon-button').addEventListener('click', () => {
-        window.resetChatId();
-      });
+      document
+        .querySelector("button.icon-button")
+        .addEventListener("click", () => {
+          window.resetChatId();
+        });
 
       // Add click handler for share button
-      document.querySelectorAll('button.icon-button')[1].addEventListener('click', async () => {
-        try {
-          await navigator.clipboard.writeText(window.location.href);
-          const toast = document.getElementById('toast');
-          toast.classList.add('show');
-          setTimeout(() => {
-            toast.classList.remove('show');
-          }, 2000);
-        } catch (err) {
-          console.error('Failed to copy URL:', err);
-        }
-      });
+      document
+        .querySelectorAll("button.icon-button")[1]
+        .addEventListener("click", async () => {
+          try {
+            await navigator.clipboard.writeText(window.location.href);
+            const toast = document.getElementById("toast");
+            toast.classList.add("show");
+            setTimeout(() => {
+              toast.classList.remove("show");
+            }, 2000);
+          } catch (err) {
+            console.error("Failed to copy URL:", err);
+          }
+        });
 
       let sourceUrl;
       let dev = false;
 
       // Environment detection
       const scriptSrc = window.location.href;
-      if (scriptSrc.includes('dev')) {
+      if (scriptSrc.includes("dev")) {
         dev = true;
-        sourceUrl = 'https://sleak-chat.github.io/sleakbot-v2';
-      } else if (scriptSrc.includes('localhost:8000')) {
-        sourceUrl = 'http://localhost:8001/';
+        sourceUrl = "https://sleak-chat.github.io/sleakbot-v2";
+      } else if (scriptSrc.includes("localhost:8000")) {
+        sourceUrl = "http://localhost:8001/";
       } else {
-        sourceUrl = 'https://sleak-chat.github.io/sleakbot-v2';
+        sourceUrl = "https://sleak-chat.github.io/sleakbot-v2";
         // sourceUrl = 'https://cdn.sleak.chat';
       }
 
       if (chatbotId) {
-        const script = document.createElement('script');
-        script.id = 'sleakbot';
+        const script = document.createElement("script");
+        script.id = "sleakbot";
         script.src = `${sourceUrl}/fetchsleakbot.js`;
-        script.setAttribute('chatbot-id', chatbotId);
-        if (dev) script.setAttribute('dev', dev);
+        script.setAttribute("chatbot-id", chatbotId);
+        if (dev) script.setAttribute("dev", dev);
         document.head.appendChild(script);
       } else {
-        console.log('no id present in url');
+        console.log("no id present in url");
       }
+
+      // window.addEventListener(
+      //   "sleakCustomFieldsHandlerInitialized",
+      //   function (event) {
+      //     console.log(event);
+      //     exampleData = {
+      //       email: "tom@sleak.chat",
+      //       ordernummer: "R250117953",
+      //     };
+
+      //     setTimeout(() => {
+      //       window.sleakPushCustomFields(exampleData);
+      //     }, 3000);
+      //   }
+      // );
     </script>
   </body>
 </html>
