hidden reset chat button

--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@
         <span id="chatbotName">Drafty</span>
       </div>
       <div class="button-group">
-        <button class="icon-button">
+        <!-- <button class="icon-button">
           <img src="images/Rotate CCW Icon.svg" alt="Reset Chat" />
           <span class="tooltip">Reset chat</span>
-        </button>
+        </button> -->
         <button class="icon-button">
           <img src="images/Stroke Rounded Icon (39).svg" alt="Agent Settings" />
           <span class="tooltip">Delen</span>
