Added new urls because of cloudlfare

--- a/index.html
+++ b/index.html
@@ -366,11 +366,11 @@
       const scriptSrc = window.location.href;
       if (scriptSrc.includes("dev")) {
         dev = true;
-        sourceUrl = "https://sleak-chat.github.io/sleakbot-v2";
+        sourceUrl = "https://sleakbot-v2.pages.dev";
       } else if (scriptSrc.includes("localhost:8000")) {
-        sourceUrl = "http://localhost:8001/";
+        sourceUrl = "http://localhost:8788";
       } else {
-        sourceUrl = "https://sleak-chat.github.io/sleakbot-v2";
+        sourceUrl = "https://sleakbot-v2.pages.dev";
         // sourceUrl = 'https://cdn.sleak.chat';
       }
 
