--- a/widget/index.html
+++ b/widget/index.html
@@ -215,13 +215,13 @@
       // Environment detection
       const scriptSrc = window.location.href;
       if (scriptSrc.includes('dev')) {
-        sourceUrl = 'https://development.sleakbot.pages.dev';
-        widgetBaseUrl = 'https://staging.sleak.chat';
+        sourceUrl = "https://sleakbot-v2.pages.dev";
+        widgetBaseUrl = 'https://dev.widget.sleak.chat';
       } else if (scriptSrc.includes('localhost')) {
-        sourceUrl = 'http://localhost:8000';
-        widgetBaseUrl = 'https://staging.sleak.chat';
+        sourceUrl = "http://localhost:8788";
+        widgetBaseUrl = 'https://dew.widget.sleak.chat';
       } else {
-        sourceUrl = 'https://cdn.sleak.chat';
+        sourceUrl = "https://sleakbot-v2.pages.dev";
         widgetBaseUrl = 'https://widget.sleak.chat';
       }
 
