--- a/widget/index.html
+++ b/widget/index.html
@@ -221,7 +221,7 @@
         sourceUrl = "http://localhost:8788";
         widgetBaseUrl = 'https://dew.widget.sleak.chat';
       } else {
-        sourceUrl = "https://sleakbot-v2.pages.dev";
+        sourceUrl = "https://cdn.sleak.chat";
         widgetBaseUrl = 'https://widget.sleak.chat';
       }
 
