--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./favicon.ico"/>
+    <link rel="icon" href="./favicon.ico" />
     <title>Widget Preview</title>
     <style>
-      body, html {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      body,
+      html {
+        font-family:
+          -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+          Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
         margin: 0;
         padding: 0;
         background-color: white;
@@ -125,21 +127,26 @@
         font-weight: 500;
         color: #333;
         transition: all 0.15s ease;
-        box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.3),
-          inset 0 -1px 0 0 rgba(0, 0, 0, 0.1), 0 1px 0 0 rgba(74, 74, 74, 0.8);
+        box-shadow:
+          inset 0 1px 0 0 rgba(255, 255, 255, 0.3),
+          inset 0 -1px 0 0 rgba(0, 0, 0, 0.1),
+          0 1px 0 0 rgba(74, 74, 74, 0.8);
         position: relative;
         top: 0;
       }
 
       .button:hover {
         background-color: #ebebeb;
-        box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.4),
-          inset 0 -1px 0 0 rgba(0, 0, 0, 0.15), 0 1px 0 0 rgba(74, 74, 74, 0.8);
+        box-shadow:
+          inset 0 1px 0 0 rgba(255, 255, 255, 0.4),
+          inset 0 -1px 0 0 rgba(0, 0, 0, 0.15),
+          0 1px 0 0 rgba(74, 74, 74, 0.8);
       }
 
       .button:active {
         top: 1px;
-        box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.1),
+        box-shadow:
+          inset 0 1px 0 0 rgba(0, 0, 0, 0.1),
           inset 0 -1px 0 0 rgba(0, 0, 0, 0.05);
       }
 
@@ -147,19 +154,24 @@
         background-color: #333;
         color: white;
         border: 1px solid #1a1a1a;
-        box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.1),
-          inset 0 -1px 0 0 rgba(0, 0, 0, 0.3), 0 1px 0 0 rgba(26, 26, 26, 0.8);
+        box-shadow:
+          inset 0 1px 0 0 rgba(255, 255, 255, 0.1),
+          inset 0 -1px 0 0 rgba(0, 0, 0, 0.3),
+          0 1px 0 0 rgba(26, 26, 26, 0.8);
       }
 
       .button.primary:hover {
         background-color: #404040;
-        box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.15),
-          inset 0 -1px 0 0 rgba(0, 0, 0, 0.4), 0 1px 0 0 rgba(26, 26, 26, 0.8);
+        box-shadow:
+          inset 0 1px 0 0 rgba(255, 255, 255, 0.15),
+          inset 0 -1px 0 0 rgba(0, 0, 0, 0.4),
+          0 1px 0 0 rgba(26, 26, 26, 0.8);
       }
 
       .button.primary:active {
         top: 1px;
-        box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.2),
+        box-shadow:
+          inset 0 1px 0 0 rgba(0, 0, 0, 0.2),
           inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
       }
 
@@ -364,13 +376,14 @@
 
       // Environment detection
       const scriptSrc = window.location.href;
-      if (scriptSrc.includes("dev")) {
+      if (scriptSrc.includes("localhost")) {
+        dev = true;
+        sourceUrl = "http://localhost:8788";
+      } else if (scriptSrc.includes("dev")) {
         dev = true;
         sourceUrl = "https://sleakbot-v2.pages.dev";
-      } else if (scriptSrc.includes("localhost:8000")) {
-        sourceUrl = "http://localhost:8788";
       } else {
-        sourceUrl = 'https://cdn.sleak.chat';
+        sourceUrl = "https://cdn.sleak.chat";
       }
 
       if (chatbotId) {
