Fixed dev url sources and dev

--- a/widget/index.html
+++ b/widget/index.html
@@ -219,7 +219,7 @@
         widgetBaseUrl = 'https://dev.widget.sleak.chat';
       } else if (scriptSrc.includes('localhost')) {
         sourceUrl = "http://localhost:8788";
-        widgetBaseUrl = 'https://dew.widget.sleak.chat';
+        widgetBaseUrl = 'https://dev.widget.sleak.chat';
       } else {
         sourceUrl = "https://cdn.sleak.chat";
         widgetBaseUrl = 'https://widget.sleak.chat';
